<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/save_restrictions2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:contentDescription="TODO"
        android:foreground="@drawable/checkmark"
        app:backgroundTint="@color/pink_a700"
        app:layout_constraintBottom_toTopOf="@+id/nav_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.966"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_restriction_plain_text"
        app:layout_constraintVertical_bias="0.9"
        app:srcCompat="@drawable/checkmark"
        app:tint="@color/pink_a700"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/search_dishes_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="19dp"
        android:text="@string/search_dishes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jake_johnson_text" />

    <EditText
        android:id="@+id/find_applicable_recipes_text"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="106dp"
        android:autofillHints=""
        android:background="@drawable/radius"
        android:backgroundTint="#C51162"
        android:ems="10"
        android:fontFamily="@font/inter_light"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:paddingHorizontal="25dp"
        android:paddingVertical="5dp"
        android:text="@string/find_applicable_recipes"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_dishes_textview"
        tools:ignore="TouchTargetSizeCheck" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green_200"
        android:text="@string/allison_abbies"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu" />

    <TextView
        android:id="@+id/plan_meal_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/plan_a_meal"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/add_participants_textView"
        android:layout_width="345dp"
        android:layout_height="44dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="40dp"
        android:text="@string/add_participants"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plan_meal_textView" />

    <TextView
        android:id="@+id/add_meal_participants_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/add_meal_participants"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_participants_textView" />

    <EditText
        android:id="@+id/yuqi_song_text"
        android:layout_width="150dp"
        android:layout_height="27dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:background="@drawable/radius"
        android:backgroundTint="#9CCC65"
        android:ems="10"
        android:fontFamily="@font/inter_regular"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:text="@string/yuqi_song"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/everett_abbies_text"
        app:layout_constraintTop_toBottomOf="@+id/greg_abbies_text"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/allison_abbies_text"
        android:layout_width="150dp"
        android:layout_height="27dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="14dp"
        android:autofillHints=""
        android:background="@drawable/radius"
        android:backgroundTint="#9CCC65"
        android:ems="10"
        android:fontFamily="@font/inter_regular"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:text="@string/allison_abbies"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_for_a_profile_text"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/everett_abbies_text"
        android:layout_width="150dp"
        android:layout_height="27dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:background="@drawable/radius"
        android:backgroundTint="#9CCC65"
        android:ems="10"
        android:fontFamily="@font/inter_regular"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:text="@string/everett_abbies"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/allison_abbies_text"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/jake_johnson_text"
        android:layout_width="150dp"
        android:layout_height="27dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:background="@drawable/radius"
        android:backgroundTint="#9CCC65"
        android:ems="10"
        android:fontFamily="@font/inter_regular"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:text="@string/jake_johnson"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/everett_abbies_text"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/greg_abbies_text"
        android:layout_width="150dp"
        android:layout_height="27dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="14dp"
        android:autofillHints=""
        android:background="@drawable/radius"
        android:backgroundTint="#9CCC65"
        android:ems="10"
        android:fontFamily="@font/inter_regular"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:text="@string/greg_abbies"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/allison_abbies_text"
        app:layout_constraintTop_toBottomOf="@+id/search_for_a_profile_text"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/search_for_a_profile_text"
        android:layout_width="360dp"
        android:layout_height="30dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:background="@drawable/radius"
        android:ems="10"
        android:fontFamily="@font/inter_regular"
        android:gravity="start|top"
        android:hint="@string/search_for_a_profile"
        android:inputType="textMultiLine"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_meal_participants_textView"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/this_meals_dishes_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="19dp"
        android:text="@string/this_meals_dishes"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/find_applicable_recipes_text" />

    <EditText
        android:id="@+id/vegan_lasagna_text"
        android:layout_width="150dp"
        android:layout_height="27dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:background="@drawable/radius"
        android:backgroundTint="#9CCC65"
        android:ems="10"
        android:fontFamily="@font/inter_regular"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:text="@string/vegan_lasagna"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/this_meals_dishes_textview"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/apple_crumble_text"
        android:layout_width="150dp"
        android:layout_height="27dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:background="@drawable/radius"
        android:backgroundTint="#9CCC65"
        android:ems="10"
        android:fontFamily="@font/inter_regular"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:text="@string/apple_crumble"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/vegan_lasagna_text"
        app:layout_constraintTop_toBottomOf="@+id/find_applicable_recipes_text"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/add_notes_meal_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="31dp"
        android:text="@string/add_notes_meal"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vegan_lasagna_text" />

    <EditText
        android:id="@+id/note_about_meal_text"
        android:layout_width="360dp"
        android:layout_height="160dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@drawable/radius"
        android:ems="10"
        android:fontFamily="@font/inter_regular"
        android:gravity="start|top"
        android:hint="@string/note_about_meal"
        android:inputType="textMultiLine"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_notes_meal_textView"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>