<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/multi_line_text_preparation3"
        android:layout_width="373dp"
        android:layout_height="163dp"
        android:autofillHints=""
        android:background="@drawable/radius"
        android:ems="10"
        android:fontFamily="@font/inter_regular"
        android:gravity="start|top"
        android:hint="@string/preparations_info"
        android:inputType="textMultiLine"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:textSize="16sp"
        tools:ignore="TextContrastCheck"
        tools:layout_editor_absoluteX="22dp"
        tools:layout_editor_absoluteY="443dp" />

    <EditText
        android:id="@+id/multi_line_text_preparation2"
        android:layout_width="373dp"
        android:layout_height="163dp"
        android:layout_marginTop="7dp"
        android:autofillHints=""
        android:background="@drawable/radius"
        android:ems="10"
        android:fontFamily="@font/inter_regular"
        android:gravity="start|top"
        android:hint="@string/ingredients_info"
        android:inputType="textMultiLine"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/ingredients_text"
        tools:ignore="TextContrastCheck"
        tools:layout_editor_absoluteX="22dp" />

    <EditText
        android:id="@+id/add_meal_text"
        android:layout_width="120dp"
        android:layout_height="33dp"
        android:autofillHints=""
        android:background="@drawable/radius"
        android:backgroundTint="#C51162"
        android:ems="10"
        android:fontFamily="@font/inter_regular"
        android:gravity="start|top"
        android:hint="@string/add_to_meal_button"
        android:inputType="textMultiLine"
        android:paddingHorizontal="15dp"
        android:paddingVertical="5dp"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="16sp"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
        tools:layout_editor_absoluteX="275dp"
        tools:layout_editor_absoluteY="16dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="7dp"
        android:clickable="true"
        android:contentDescription="TODO"
        app:backgroundTint="#C51162"
        app:layout_constraintBottom_toTopOf="@+id/nav_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@android:drawable/ic_input_add" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu" />

    <TextView
        android:id="@+id/vegan_pasta_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="216dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/vegan_pasta"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ingredients_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/ingredients"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="204dp" />

    <TextView
        android:id="@+id/preparation_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/preparations"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="410dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
