<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/add_block"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:background="@drawable/radius"
        android:backgroundTint="@color/green_200"
        android:fontFamily="@font/inter_semibold"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:text="@string/add_block"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/item_name_input_add"
        android:layout_width="310dp"
        android:layout_height="35dp"
        android:background="@drawable/radius"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/item_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/add_block"
        app:layout_constraintEnd_toEndOf="@+id/add_block"
        app:layout_constraintStart_toStartOf="@+id/add_block"
        app:layout_constraintTop_toTopOf="@+id/add_block"
        app:layout_constraintVertical_bias="0.3"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/quantity_input_add"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/radius"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/quantity"
        android:importantForAutofill="no"
        android:inputType="number"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/add_block"
        app:layout_constraintEnd_toEndOf="@+id/add_block"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="@+id/add_block"
        app:layout_constraintTop_toBottomOf="@+id/item_name_input_add"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/unit_input_add"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/radius"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/unit_ex_ml"
        android:importantForAutofill="no"
        android:inputType="number"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/add_block"
        app:layout_constraintEnd_toEndOf="@+id/add_block"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="@+id/add_block"
        app:layout_constraintTop_toBottomOf="@+id/item_name_input_add"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/edit_save_button_add"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:background="@drawable/radius"
        android:backgroundTint="@color/pink_a700"
        android:fontFamily="@font/inter_regular"
        android:text="@string/save_pantry_item"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/add_block"
        app:layout_constraintEnd_toEndOf="@+id/add_block"
        app:layout_constraintStart_toStartOf="@+id/add_block"
        app:layout_constraintTop_toTopOf="@+id/add_block"
        app:layout_constraintVertical_bias="0.9"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>